--- a/portfolio.html
+++ b/portfolio.html
@@ -233,10 +233,10 @@
                 </li>
           </ul>
         </div>
-        <div>
+        <div class="subscription">
           <b class="footer-title">Подпишитесь на рассылку</b>
+          <form> <input type="email" name="email" placeholder="E-mail"><button type="submit" class="subscribe-button">Подписаться <svg class="icon" width="24" height="24"><use href="./images/sprite.svg#letter"></use></svg></button></form>
         </div>
-        <button class="subscribe-button">Подписаться</button>
       </div>
       <p class="copyright container">2020 | Developed by GoIT Students</p>
     </footer>
