--- a/index.html
+++ b/index.html
@@ -255,11 +255,29 @@
         </div>
         <div class="subscription">
           <b class="footer-title">Подпишитесь на рассылку</b>
-          <form> <input type="email" name="email" placeholder="E-mail"><button type="submit" class="subscribe-button">Подписаться <svg class="icon" width="24" height="24"><use href="./images/sprite.svg#letter"></use></svg></button></form>
+          <form><input type="email" name="email" placeholder="E-mail"><button type="submit" class="subscribe-button">Подписаться <svg class="icon" width="24" height="24"><use href="./images/sprite.svg#letter"></use></svg></button></form>
         </div>
       </div>
       <p class="copyright container">2020 | Developed by GoIT Students</p>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="close-button" data-modal-close><svg class="icon" width="11" height="11">
+          <use href="./images/sprite.svg#cross"></use>
+        </svg></button>
+        <b class="modal-title">Оставьте свои данные, мы вам перезвоним</b>
+        <form>
+        <ul class="input-list">
+          <li><input type="name" name="name" id="name" placeholder=" "><label class="form-label" for="name">Имя</label><svg class="icon" width="12" height="12"><use href="./images/sprite.svg#avatar"></use></svg></li>
+          <li><input type="tel" name="telephone" id="telephone" placeholder=" "><label class="form-label" for="telephone">Телефон</label><svg class="icon" width="13" height="13"><use href="./images/sprite.svg#handset"></use></svg></li>
+          <li><input type="email" name="email" id="email" placeholder=" "><label class="form-label" for="email">Почта</label><svg class="icon" width="15" height="12"><use href="./images/sprite.svg#envelop_modal"></use></svg></li>
+        </ul>
+        <div class="textarea-form"><textarea name="comment" id="comment"></textarea><label class="textarea-label" for="comment">Комментарий</label>
+        <input type="checkbox" name="agreement" id="agreement" value="agree"><label for="agreement" class="agreement">Соглашаюсь с рассылкой и принимаю &nbsp<a href="" class="agreement-link">Условия договора</a></label></div>
+        <button type="submit" class="modal-button">Отправить</button>
+        </form>
+      </div></div>
     <script src="./js/modal.js"></script>
   </body>
 </html>
+
