--- a/index.html
+++ b/index.html
@@ -199,22 +199,22 @@
           <h2 class="section-title">Постоянные клиенты</h2>
           <ul class="clients flex">
             <li>
-              <a href=""class="clients-link"><svg class="icon" width="170" height="90"><use href="./images/sprite.svg#company_1"></use></svg></a>
+              <a href="" class="clients-link"><svg class="icon" width="170" height="90"><use href="./images/sprite.svg#company_1"></use></svg></a>
             </li>
             <li>
-              <a href=""class="clients-link"><svg class="icon" width="170" height="90"><use href="./images/sprite.svg#company_2"></use></svg></a>
+              <a href="" class="clients-link"><svg class="icon" width="170" height="90"><use href="./images/sprite.svg#company_2"></use></svg></a>
             </li>
             <li>
-              <a href=""class="clients-link"><svg class="icon" width="170" height="90"><use href="./images/sprite.svg#company_3"></use></svg></a>
+              <a href="" class="clients-link"><svg class="icon" width="170" height="90"><use href="./images/sprite.svg#company_3"></use></svg></a>
             </li>
             <li>
-              <a href=""class="clients-link"><svg class="icon" width="170" height="90"><use href="./images/sprite.svg#company_4"></use></svg></a>
+              <a href="" class="clients-link"><svg class="icon" width="170" height="90"><use href="./images/sprite.svg#company_4"></use></svg></a>
             </li>
             <li>
-              <a href=""class="clients-link"><svg class="icon" width="170" height="90"><use href="./images/sprite.svg#company_5"></use></svg></a>
+              <a href="" class="clients-link"><svg class="icon" width="170" height="90"><use href="./images/sprite.svg#company_5"></use></svg></a>
             </li>
             <li>
-              <a href=""class="clients-link"><svg class="icon" width="170" height="90"><use href="./images/sprite.svg#company_6"></use></svg></a>
+              <a href="" class="clients-link"><svg class="icon" width="170" height="90"><use href="./images/sprite.svg#company_6"></use></svg></a>
             </li>
           </ul>
         </div>
@@ -268,12 +268,12 @@
         <b class="modal-title">Оставьте свои данные, мы вам перезвоним</b>
         <form>
         <ul class="input-list">
-          <li><input type="name" name="name" id="name" placeholder=" "><label class="form-label" for="name">Имя</label><svg class="icon" width="12" height="12"><use href="./images/sprite.svg#avatar"></use></svg></li>
+          <li><input type="text" name="name" id="name" placeholder=" "><label class="form-label" for="name">Имя</label><svg class="icon" width="12" height="12"><use href="./images/sprite.svg#avatar"></use></svg></li>
           <li><input type="tel" name="telephone" id="telephone" placeholder=" "><label class="form-label" for="telephone">Телефон</label><svg class="icon" width="13" height="13"><use href="./images/sprite.svg#handset"></use></svg></li>
           <li><input type="email" name="email" id="email" placeholder=" "><label class="form-label" for="email">Почта</label><svg class="icon" width="15" height="12"><use href="./images/sprite.svg#envelop_modal"></use></svg></li>
         </ul>
-        <div class="textarea-form"><textarea name="comment" id="comment"></textarea><label class="textarea-label" for="comment">Комментарий</label>
-        <input type="checkbox" name="agreement" id="agreement" value="agree"><label for="agreement" class="agreement">Соглашаюсь с рассылкой и принимаю &nbsp<a href="" class="agreement-link">Условия договора</a></label></div>
+        <div class="textarea-form"><textarea name="comment" id="comment" placeholder=" "></textarea><label class="textarea-label" for="comment">Комментарий</label>
+        <label class="agreement"><input type="checkbox" name="agreement" value="agree" class="checkbox"><span class="icon"></span>Соглашаюсь с рассылкой и принимаю&nbsp;<a href="" class="agreement-link">Условия договора</a></label></div>
         <button type="submit" class="modal-button">Отправить</button>
         </form>
       </div></div>
