--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <button data-modal-open type="button" class="order-button">Заказать услугу</button>
         </div>
       </section>
-      <section class="section border">
+      <section class="section no-padding">
         <div class="container">
           <!-- уявний заголовок-->
           <h2 class="fake-title">Наши преимущества</h2>
@@ -117,7 +117,7 @@
           <ul class="team flex">
             <li>
               <img src="./images/smith.jpg" alt="мужчина" width="270" />
-              <h3 class="member-name">John Smith</h3>
+              <h3 class="member-name">Николай Кучеренко</h3>
               <p class="member-position">Product Designer</p>
               <ul class="contacts-flex">
                 <li>
@@ -136,7 +136,7 @@
             </li>
             <li>
               <img src="./images/stewart.jpg" alt="женщина" width="270" />
-              <h3 class="member-name">Marta Stewart</h3>
+              <h3 class="member-name">Ольга Иванова</h3>
               <p class="member-position">Frontend Developer</p>
               <ul class="contacts-flex">
                 <li>
@@ -155,7 +155,7 @@
             </li>
             <li>
               <img src="./images/jakis.jpg" alt="мужчина" width="270" />
-              <h3 class="member-name">Robert Jakis</h3>
+              <h3 class="member-name">Андрей Шевченко</h3>
               <p class="member-position">Marketing</p>
               <ul class="contacts-flex">
                 <li>
@@ -174,7 +174,7 @@
             </li>
             <li>
               <img src="./images/doe.jpg" alt="мужчина" width="270" />
-              <h3 class="member-name">Martin Doe</h3>
+              <h3 class="member-name">Иван Николаев</h3>
               <p class="member-position">UI Designer</p>
               <ul class="contacts-flex">
                 <li>
