--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             <a href="mailto:info@example.com" class="contacts-footer"
               >info@example.com</a
             >
-            <a href="tel:+380991111111" class="contacts-footer tel"
+            <a href="tel:+380991111111" class="contacts-footer"
               >+38 099 111 11 11</a
             >
           </address>
@@ -258,7 +258,6 @@
           <form><input type="email" name="email" placeholder="E-mail"><button type="submit" class="subscribe-button">Подписаться <svg class="icon" width="24" height="24"><use href="./images/sprite.svg#letter"></use></svg></button></form>
         </div>
       </div>
-      <p class="copyright container">2020 | Developed by GoIT Students</p>
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
